# pager

./: .gitignore  Cargo.toml  README.md  ble_client.html  build.rs  build.sh  memory.x  merge_hex.py
.cargo/: config.toml
mcp/: serial_mcp.py  tshark_mcp.py
src/: ble.rs  flash.rs  index.html  main.rs  web.rs
tests/: diagnostic_ble.py  flash_device.py  scan_ble.py  test_device.py
