[package]
name = "pager"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-nrf = { version = "0.11.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

# USB, Networking and DHCP dependencies
embassy-usb = { version = "0.6.0", features = ["defmt"] }
embassy-net = { version = "0.9.1", features = ["defmt", "tcp", "udp", "medium-ethernet", "proto-ipv4"] }
leasehund = "0.5.2"
static_cell = "2.1.1"
embedded-io-async = "0.7.0"
heapless = "0.9.3"
embassy-futures = "0.1.2"
embedded-storage = "0.3.1"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "z"
overflow-checks = false
